# rag-stuff

./: README.md  pyproject.toml
data/test_data/: test_3.txt
src/app/: loader.py  main.py  retriever.py
tests/: test_api.py  test_loader.py  test_retriever.py
